resize navbar titles & resize why us img & reduce the spaces betwwen headers & fix car img on tablet

--- a/web.css
+++ b/web.css
@@ -11,11 +11,19 @@ a {
     outline: none;
 }
 
+.about .aboutImg {
+    text-align: center;
+  }
+
 /* start nav */
+.navbar {
+  background-color: #000;
+  opacity: .9;
+}
 
 .navbar .nav-item .nav-link {
   color: #fff;
-  font-size: 16px;
+  font-size: 14px;
 }
 
 .navbar .nav-item {
@@ -86,6 +94,7 @@ a {
   font-size: 34px;
   font-weight: 900;
   text-transform: uppercase;
+  margin-bottom: 0px;
 }
 
 .about .h1 {
@@ -93,6 +102,7 @@ a {
   text-transform: uppercase;
   color: #ff7600;
   font-weight: 900;
+  margin-top: 0;
 }
 
 .about p {
@@ -111,16 +121,20 @@ a {
 .why h1 {
   font-size: 34px;
   font-weight: 900;
+  margin-bottom: 0px;
 }
 
 .why h2 {
   font-size: 44px;
   font-weight: 900;
+  margin-bottom: 0px;
+  margin-top: 0px;
 }
 
 .why h3 {
   color: #ff7600;
   font-size: 54px;
+  margin-top: 0px;
   font-weight: 900;
 }
 
@@ -162,6 +176,7 @@ a {
 
 .pricing h1 {
   font-size: 34px;
+  margin-bottom: 0px;
   font-weight: 900;
 }
 
@@ -169,7 +184,8 @@ a {
   font-weight: 900;
   color: #ff7600;
   font-size: 44px;
-  margin-bottom: 6%;
+  margin-bottom: 3%;
+  margin-top: 0;
 }
 
 .pricing .porta {
@@ -741,6 +757,10 @@ a {
 }
 
 @media (min-width: 426px) and (max-width: 768px) {
+  .header {
+    background-size: contain;
+  }
+
   .Partners {
     height: 100%;
   }
